<resources>
    <string name="app_name">Walk With Me</string>
    <string name="action_settings">Settings</string>
    <string name="action_friendlist">Friendlist</string>
    <string name="action_topUsers">Top Users</string>
    <string name="action_swipen">Swipen</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Walk With Me</string>
    <string name="second_fragment_label">Swipen</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="fragment_top_users">Top Users</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_unsuccessful">Login Unsuccessful</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_manage_pictures">Add/Remove Picture</string>
    <string name="action_delete_profile">Delete Profile</string>
    <string name="action_preferences">Manage Preferences</string>
    <string name="action_manage_profile">Manage Profile</string>
</resources>