<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.walkwithme.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_topUsers"
            app:destination="@id/topUsers" />
        <action
            android:id="@+id/action_FirstFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_friends"
            app:destination="@id/friends" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.walkwithme.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.walkwithme.ui.login.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/topUsers"
        android:name="com.walkwithme.TopUsers"
        android:label="@string/fragment_top_users"
        tools:layout="@layout/fragment_top_users" >
        <action
            android:id="@+id/action_topUsers_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_topUsers_to_profile"
            app:destination="@id/profile" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.walkwithme.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_profile"
            app:destination="@id/profile" />
    </fragment>
    <fragment
        android:id="@+id/profile"
        android:name="com.walkwithme.Profile"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="Id"
            android:defaultValue="0"
            app:argType="integer" />
        <action
            android:id="@+id/action_profile_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profile_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/friends"
        android:name="com.walkwithme.Friends"
        android:label="Friendlist"
        app:launchSingleTop="true"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_friends_to_profile"
            app:destination="@id/profile"
            app:popUpTo="@id/friends" />
    </fragment>
</navigation>